Fix flash of bar on mobile

--- a/frontend/styles/Sidebar.module.css
+++ b/frontend/styles/Sidebar.module.css
@@ -52,6 +52,7 @@
 @media (max-width: 590px) {
   .container {
     position: fixed;
+    display: none;
   }
 }
 
